--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
      {% load static %}
+     <title>Pagina de cursos online</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -48,6 +49,15 @@
                         <div class="card-header"><h5>Lesson {{lesson.order|add:1}}: {{lesson.title}}</h5></div>
                         <div class="card-body">{{lesson.content}}</div>
                     </div>
+                    {% if user.is_authenticated %}
+                       
+                        <button class="btn btn-info btn-block" data-toggle="collapse" data-target="#{{lesson.id}}">Start Exam</button>
+
+                        <div id="exam{{lesson.id}}" class="collapse">
+                            Click to expand elements within the collapse div
+                        </div>
+
+                    {% endif %}
                 {% endfor %}
             </div>
             <!-- Task: show questions and choices -->
@@ -55,7 +65,7 @@
             https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
 
             <!--
-
+                
             A collapse example here:
             <div id="exam" class="collapse">
                 Click to expand elements within the collapse div
@@ -64,7 +74,7 @@
             -->
 
             <!-- <HINT> If user is authenticated, show course exam with a list of question -->
-
+            
             <!-- <HINT> Each example will have many questions -->
 
             <!-- <HINT> Each question will have many choices -->
