--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     {% load static %}
-     <title>Pagina de cursos online</title>
+    {% load custom_template_tags %}
+    {% load static %}
+    <title>Pagina de cursos online</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
+
+    <script>
+
+        document.addEventListener("DOMContentLoaded", () => {
+
+            const lessons = document.getElementsByClassName("lesson");
+            const startExamBtn = document.getElementById("startExam");
+
+            startExamBtn.addEventListener("click", () => {
+                
+                for (let lesson of lessons){
+                    lesson.classList.add("d-none")
+                    startExamBtn.classList.add("d-none")
+                }
+
+            });
+
+        });
+
+        
+
+    </script>
+
 </head>
 
 <body>
@@ -45,21 +69,45 @@
             <h2>{{ course.name }}</h2>
             <div class="card-columns-vertical">
                 {% for lesson in course.lesson_set.all %}
-                    <div class="card mt-1">
+                    <div class="card mt-1 lesson">
                         <div class="card-header"><h5>Lesson {{lesson.order|add:1}}: {{lesson.title}}</h5></div>
                         <div class="card-body">{{lesson.content}}</div>
                     </div>
-                    {% if user.is_authenticated %}
-                       
-                        <button class="btn btn-info btn-block" data-toggle="collapse" data-target="#{{lesson.id}}">Start Exam</button>
-
-                        <div id="exam{{lesson.id}}" class="collapse">
-                            Click to expand elements within the collapse div
-                        </div>
-
-                    {% endif %}
                 {% endfor %}
+
+                {% if user.is_authenticated %}
+                       
+                    <button class="btn btn-info btn-block" id="startExam" data-toggle="collapse" data-target="#exam{{lesson.id}}">Start Exam</button>
+
+                    <div id="exam{{lesson.id}}" class="collapse">
+                        <form id="questionform" action="point to a submit view" method="post">
+                            <!--- ... for each question in the course ... --->
+                            {% for question in course.question_set.all %}
+                                <div class="card mt-1">
+                                    <div class="card-header"><h5>{{ question.question_text}}</h5></div>
+                                    {% csrf_token %}
+                                    <div class="form-group">
+                                        <!--- ... for each choice in the question ... --->
+                                        {% for choice in question.choice_set.all %}
+                                            <div class="form-check">
+                                                <label class="form-check-label">
+                                                    <input type="checkbox" name="choice_{{choice.id}}"
+                                                           class="form-check-input" id="{{choice.id}}"
+                                                           value="{{choice.id}}">{{ choice.choice_text }}
+                                                </label>
+                                            </div>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                            {% endfor %}
+                            <input class="btn btn-success btn-block" type="submit" value="Submit">
+                        </form>
+                    </div>
+
+                {% endif %}
+                
             </div>
+
             <!-- Task: show questions and choices -->
             <!-- <HINT> Use Bootstrap Collapse to hide exam first, more details could be found here
             https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
