--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -15,14 +15,33 @@
         document.addEventListener("DOMContentLoaded", () => {
 
             const lessons = document.getElementsByClassName("lesson");
+            const choices = document.getElementsByClassName("choice");
             const startExamBtn = document.getElementById("startExam");
+            const cancelExamBtn = document.getElementById("cancelExam");
 
             startExamBtn.addEventListener("click", () => {
                 
                 for (let lesson of lessons){
-                    lesson.classList.add("d-none")
-                    startExamBtn.classList.add("d-none")
+                    lesson.classList.add("d-none");
                 }
+
+                startExamBtn.classList.add("d-none");
+                cancelExamBtn.classList.remove("d-none");
+
+            });
+
+            cancelExamBtn.addEventListener("click", () => {
+
+                for (let lesson of lessons){
+                    lesson.classList.remove("d-none");
+                }
+
+                for (let choice of choices){
+                    choice.checked = false;
+                }
+
+                startExamBtn.classList.remove("d-none");
+                cancelExamBtn.classList.add("d-none");
 
             });
 
@@ -77,9 +96,10 @@
 
                 {% if user.is_authenticated %}
                        
-                    <button class="btn btn-info btn-block" id="startExam" data-toggle="collapse" data-target="#exam{{lesson.id}}">Start Exam</button>
+                    <button class="btn btn-info btn-block" id="startExam" data-toggle="collapse" data-target="#exam{{course.id}}">Start Exam</button>
+                    <button class="btn btn-danger btn-block d-none" id="cancelExam" data-toggle="collapse" data-target="#exam{{course.id}}">Cancel Exam</button>
 
-                    <div id="exam{{lesson.id}}" class="collapse">
+                    <div id="exam{{course.id}}" class="collapse">
                         <form id="questionform" action="point to a submit view" method="post">
                             <!--- ... for each question in the course ... --->
                             {% for question in course.question_set.all %}
@@ -92,7 +112,7 @@
                                             <div class="form-check">
                                                 <label class="form-check-label">
                                                     <input type="checkbox" name="choice_{{choice.id}}"
-                                                           class="form-check-input" id="{{choice.id}}"
+                                                           class="form-check-input choice" id="{{choice.id}}"
                                                            value="{{choice.id}}">{{ choice.choice_text }}
                                                 </label>
                                             </div>
