--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -56,10 +56,10 @@
                     <div class="card-body">
                         <!--- ... for each choice in the question ... --->
                         {% for choice in question.choice_set.all %}
-                           
-                            {% if choice.is_correct %}
+                            
+                            {% if choice.is_correct and choice.id in selected_ids %}
                                 <p class="m-0 text-success" id="{{choice.id}}">{{ choice.choice_text }}</p>
-                            {% elif choice.is_correct and True %}
+                            {% elif choice.is_correct %}
                                 <p class="m-0 text-warning" id="{{choice.id}}">Not selected: {{ choice.choice_text }}</p>
                             {% else %}
                                 <p class="m-0" id="{{choice.id}}">{{ choice.choice_text }}</p>
