--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -60,7 +60,9 @@
                             {% if choice.is_correct and choice.id in selected_ids %}
                                 <p class="m-0 text-success" id="{{choice.id}}">{{ choice.choice_text }}</p>
                             {% elif choice.is_correct %}
-                                <p class="m-0 text-warning" id="{{choice.id}}">Not selected: {{ choice.choice_text }}</p>
+                                <p class="m-0 text-warning" id="{{choice.id}}"><b>Not selected:</b> {{ choice.choice_text }}</p>
+                            {% elif not choice.is_correct and choice.id in selected_ids %}
+                                <p class="m-0 text-danger" id="{{choice.id}}"><b>Incorrect Answer:</b> {{ choice.choice_text }}</p>
                             {% else %}
                                 <p class="m-0" id="{{choice.id}}">{{ choice.choice_text }}</p>
                             {% endif %}
